# USEagent

./: ACTION_HOOK_CONCURRENCY_DESIGN.md  Dockerfile  HOOK.md  TOP_LEVEL_ACTION_HOOKS.md  pyproject.toml
tests/: test_action_hook_settings.py  test_action_hooks.py  test_ordered_agent_dispatch.py
tests/common/: test_context_window.py  test_fitting_messages_into_context_window.py
tests/state/: test_usage_tracker.py
tests/tools/bash/: test_bash_tool.py
useagent/: action_hook_scheduler.py  action_hook_settings.py  action_hooks.py  config.py  main.py  task_runner.py
useagent/agents/meta/: agent.py
useagent/common/: constants.py  context_window.py
useagent/state/: git_repo.py  usage_tracker.py
useagent/tools/: bash.py  meta.py
