[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "useagent-turbo-dev"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "loguru>=0.7.3",
  "httpx>=0.28.1",
  "pydantic-ai==1.0.0b1",
  "tiktoken>=0.9.0",
  "sentencepiece>=0.2.1",
  "datasets>=3.1.0",
  "unidiff>=0.7.5",
]

# Optional: define a CLI so you don't need python -m ...
[project.scripts]
useagent = "useagent.main:main"

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-asyncio",
  "pytest-random-order",
  "pytest-timeout",
  "pytest-cov",
  "black==25.1.0",
  "isort==6.0.1",
  "pyupgrade==3.20.0",
  "ruff==0.12.3",
  "pyright==1.1.404",
  "pre-commit==4.2.0",
]

usebench = [
  "usebench @ git+ssh://git@github.com/nus-apr/use-bench.git@0a985ae"
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["useagent", "useagent.*", "microagents","microagents.*"]

[tool.setuptools.package-data]
useagent = ["**/*.txt", "**/*.json", "**/*.yaml", "**/*.yml", "**/*.md", "**/*.model"]
microagents = ["**/*.md"]

[tool.uv]
# We want to test out 1.0.0 for pydantic_ai so we see the 'final' API
prerelease = 'allow'
